k8s/test-keycloak/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:18.0.0
          args: [ "start-dev", "--cache-stack=kubernetes", "--import-realm" ]
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7600
          volumeMounts:
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import/realm-export.json
              subPathExpr: realm-export.json
      volumes:
        - name: keycloak-volume
          configMap:
            name: keycloak-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: auth.localtest.me
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /keycloak/(.*)
            pathType: Prefix
